# PatchMatch

./: CMakeLists.txt  Functions.cmake  README.md
Core/: CMakeLists.txt
Core/Core/exceptions/: runtimeerror.cpp  runtimeerror.h
Core/Core/image/: imagetypes.h  imageutility.cpp  imageutility.h
Core/Core/utility/: boundingbox.cpp  boundingbox.h  boundinginterval.cpp  boundinginterval.h  casts.h  intcoord.cpp  intcoord.h  linesegment.cpp  linesegment.h  mathutility.cpp  mathutility.h  twodarray.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
CoreQt/: CMakeLists.txt
CoreQt/CoreQt/: imageeditlabel.cpp  imageeditlabel.h  qdatastreamutility.cpp  qdatastreamutility.h  qtinterfaceutility.cpp  qtinterfaceutility.h
HoleFillApplication/: CMakeLists.txt  main.cpp
HoleFillApplication/runtimeResources/images/: README.txt  pexels-photo-5712934.jpeg~
HoleFillApplication/runtimeResources/openCLPrograms/: bleedProgram.cl
HoleFillApplication/runtimeResources/openCLPrograms/patches/: holeFillPatchMatch.cl
HoleFillApplication/runtimeResources/openCLPrograms/utility/: utility.cl
OpenCL/: CMakeLists.txt
OpenCL/OpenCL/: device.cpp  device.h  opencldist.cpp  opencldist.h  openclgpuhost.cpp  openclgpuhost.h  opencltypes.h  platform.cpp  platform.h
PatchMatch/: CMakeLists.txt
PatchMatch/PatchMatch/: holefillpatchmatch.cpp  holefillpatchmatch.h  holefillpatchmatchopencl.cpp  holefillpatchmatchopencl.h  nnf.cpp  nnf.h  patchmatch.cpp  patchmatch.h  patchmatchutility.cpp  patchmatchutility.h
View/: CMakeLists.txt
View/View/: holefilllabel.cpp  holefilllabel.h  holefillwindow.cpp  holefillwindow.h  holefillwindow.ui  loadimagesdialog.cpp  loadimagesdialog.h  loadimagesdialog.ui  opencldeviceselection.cpp  opencldeviceselection.h  selectopencldevicedialog.cpp  selectopencldevicedialog.h  selectopencldevicedialog.ui
